more changes to separate build dir
Change-Id: Ib94b963eddce5399bdf09c6fc4d535db2400dbaa

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,17 +1,10 @@
-#SUBDIRS = \
-#        vmevent \
-#        vmdir \
-#        vmdns \
-#        vmafd \
-#        vmca \
-#        vmidentity \
-#        config
+SUBDIRS = \
+        vmevent \
+        vmdir \
+        vmdns \
+        vmafd \
+        vmca \
+        vmidentity \
+        config
 
-subdirs = vmevent vmdir vmdns vmafd vmca config
-
-$(subdirs):
-	make -C $@ $(AM_MAKEFLAGS) DESTDIR=$(PWD)/stage install
-
-.PHONY: $(subdirs)
-
-all: $(subdirs)
+export STAGEDIR
