--- a/vmevent/Makefile.am
+++ b/vmevent/Makefile.am
@@ -3,6 +3,15 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = \
     include
 
-stage: all
-	echo "=================  VMEVENT STAGE TARGET ===================="
-	touch /tmp/VMEVENT_STAGE_TARGET
+stage:
+	if test -n '$(STAGEDIR)'; then \
+	  list='$(SUBDIRS)' ; \
+	  for subdir in $$list; do \
+	    echo "Staging install in $$subdir"; \
+	    $(MAKE) -C $$subdir $(AM_MAKEFLAGS) DESTDIR=$(STAGEDIR) install; \
+	  done; \
+	fi
+
+all-local: stage
+
+.PHONY: stage
