--- a/vmidentity/jdepends/Makefile.am
+++ b/vmidentity/jdepends/Makefile.am
@@ -6,4 +6,4 @@ vmstsjars_DATA= \
 
 @top_builddir@/vmware-sts/packages/vmware-identity-depends.jar:
 	@echo "Handling dependent jars"
-	cd @top_srcdir@/jdepends && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dant.home="@ANT_HOME@" org.apache.tools.ant.launch.Launcher $(ANT_VERBOSE) -f build.xml build
+	cd @top_srcdir@/jdepends && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dant.home="@ANT_HOME@" -Dbuild_dir="@abs_top_builddir@" org.apache.tools.ant.launch.Launcher $(ANT_VERBOSE) -f build.xml build
