--- a/config/Makefile.am
+++ b/config/Makefile.am
@@ -6,3 +6,16 @@ SUBDIRS = \
     pscsetup \
     tools \
     scripts
+
+stage:
+	if test -n '$(STAGEDIR)'; then \
+	  list='$(SUBDIRS)' ; \
+	  for subdir in $$list; do \
+	    echo "Staging install in $$subdir"; \
+	    $(MAKE) -C $$subdir $(AM_MAKEFLAGS) DESTDIR=$(STAGEDIR) install; \
+	  done; \
+	fi
+
+all-local: stage
+
+.PHONY: stage
