--- a/vmafd/interop/java/cdc/build.xml
+++ b/vmafd/interop/java/cdc/build.xml
@@ -13,12 +13,11 @@
    <property name="client-domain-controller-cache.vendor"
              value="VMWare, Inc." />
 
-   <property file="../product.properties" />
    <property name="MAINSRCROOT" value="${basedir}/../../.."/>
-   <property name="buildRoot" value="${build_dir}/${PRODUCT_NAME}"/>
-
+   <property file="${MAINSRCROOT}/interop/java/product.properties" />
    <import file="${MAINSRCROOT}/build/ant/presets.xml" />
    <import file="${MAINSRCROOT}/build/ant/defaults.xml" />
+   <property name="buildRoot" value="${build_dir}/${PRODUCT_NAME}"/>
 
    <path id="classpath.main">
    </path>
