--- a/vmdir/Makefile.am
+++ b/vmdir/Makefile.am
@@ -18,3 +18,16 @@ SUBDIRS += \
     testing
 
 endif
+
+stage:
+	if test -n '$(STAGEDIR)'; then \
+	  list='$(SUBDIRS)' ; \
+	  for subdir in $$list; do \
+	    echo "Staging install in $$subdir"; \
+	    $(MAKE) -C $$subdir $(AM_MAKEFLAGS) DESTDIR=$(STAGEDIR) install; \
+	  done; \
+	fi
+
+all-local: stage
+
+.PHONY: stage
