--- a/vmdns/Makefile.am
+++ b/vmdns/Makefile.am
@@ -9,3 +9,16 @@ SUBDIRS = \
     test \
     config \
     tools
+
+stage:
+	if test -n '$(STAGEDIR)'; then \
+	  list='$(SUBDIRS)' ; \
+	  for subdir in $$list; do \
+	    echo "Staging install in $$subdir"; \
+	    $(MAKE) -C $$subdir $(AM_MAKEFLAGS) DESTDIR=$(STAGEDIR) install; \
+	  done; \
+	fi
+
+all-local: stage
+
+.PHONY: stage
