--- a/vmidentity/jdepends/build.xml
+++ b/vmidentity/jdepends/build.xml
@@ -6,8 +6,8 @@
 
   <property name="MAINSRCROOT" value="${basedir}/.." />
   <property file="../product.properties" />
-  <property name="buildRoot" value="${MAINSRCROOT}/build/${PRODUCT_NAME}" />
-  <property name="depends" value="${MAINSRCROOT}/build/depends" />
+  <property name="buildRoot" value="${build_dir}/${PRODUCT_NAME}" />
+  <property name="depends" value="${build_dir}/depends" />
 
   <import file="${MAINSRCROOT}/build/ant/presets.xml" />
   <import file="${MAINSRCROOT}/build/ant/defaults.xml" />
