--- a/vmdir/tools/vdcadmintool/Makefile.am
+++ b/vmdir/tools/vdcadmintool/Makefile.am
@@ -22,13 +22,16 @@ vdcadmintool_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
     @GSSAPI_LIBS@ \
+    @UUID_LIBS@ \
     @SASL_LIBS@ \
-    @LDAP_LIBS@
+    @LDAP_LIBS@ \
+    @LBER_LIBS@
 
 vdcadmintool_LDFLAGS = \
     @DCERPC_LDFLAGS@ \
