--- a/vmdir/tools/vdcrepadmin/Makefile.am
+++ b/vmdir/tools/vdcrepadmin/Makefile.am
@@ -15,15 +15,20 @@ vdcrepadmin_CPPFLAGS = \
 vdcrepadmin_LDADD = \
     $(top_builddir)/client/libvmdirclient.la \
     $(top_builddir)/common/libcommon.la \
+    @DCERPC_LIBS@ \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
     @GSSAPI_LIBS@ \
-    @LDAP_LIBS@
+    @UUID_LIBS@ \
+    @SASL_LIBS@ \
+    @LDAP_LIBS@ \
+    @LBER_LIBS@
 
 vdcrepadmin_LDFLAGS = \
     @OPENSSL_LDFLAGS@ \
