--- a/vmdir/tools/vdcschema/Makefile.am
+++ b/vmdir/tools/vdcschema/Makefile.am
@@ -23,11 +23,14 @@ vdcschema_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
+    @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
+    @PTHREAD_LIBS@ \
     @LDAP_LIBS@
 
 vdcschema_LDFLAGS = \
