--- a/vmdir/tools/vmkdc_admin/Makefile.am
+++ b/vmdir/tools/vmkdc_admin/Makefile.am
@@ -33,6 +33,7 @@ vmkdc_admin_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @UUID_LIBS@ \
