--- a/config/jdepends/Makefile.am
+++ b/config/jdepends/Makefile.am
@@ -1,8 +1,5 @@
-
 CLASSPATH=@TOOLS_CLASSPATH@:@ANT_CLASSPATH@
 
-all: install-exec-local
-
-install-exec-local:
+all-local:
 	@echo "Downloading dependencies for Configuration"
 	cd @top_srcdir@/jdepends && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dant.home="@ANT_HOME@" -Dbuild_dir="@abs_top_builddir@" org.apache.tools.ant.launch.Launcher $(ANT_VERBOSE) -f build.xml build
