fix vmidentity build
Change-Id: I8b5dc12945602f58da5a5d8283d7bd0542750c82

--- a/vmidentity/build.xml
+++ b/vmidentity/build.xml
@@ -2,7 +2,7 @@
 <project name="vmidentity" default="build" basedir=".">
 
   <!-- Configuration set up -->
-  <property name="MAINSRCROOT" value="${basedir}" />
+  <property name="MAINSRCROOT" value="${basedir}/.." />
   <property file="${MAINSRCROOT}/product.properties" />
   <property name="buildRoot" value="${build_dir}/${PRODUCT_NAME}" />
 
@@ -53,7 +53,7 @@
     <exec executable="${maven}" failonerror="true">
       <env key="M2_HOME" value="${maven.home}"/>
       <env key="JAVA_HOME" value="${jre.home}"/>
-      <arg line=" versions:set -DskipTests=true -Dmaven.javadoc.skip=true -DbuildDir=${build_dir}/vmware-sts clean install" />
+      <arg line=" versions:set -DskipTests=true -Dmaven.javadoc.skip=true -Dbuild_dir=${build_dir} -DbuildDir=${build_dir}/vmware-sts clean install" />
     </exec>
   </target>
 
