--- a/vmidentity/Makefile.am
+++ b/vmidentity/Makefile.am
@@ -8,7 +8,7 @@ SUBDIRS = \
 
 stage:
 	if test -n '$(STAGEDIR)'; then \
-	  @list='$(SUBDIRS)' ; \
+	  list='$(SUBDIRS)' ; \
 	  for subdir in $$list; do \
 	    echo "Staging install in $$subdir"; \
 	    $(MAKE) -C $$subdir $(AM_MAKEFLAGS) DESTDIR=$(STAGEDIR) install; \
