--- a/vmidentity/ssoclients/common/test/Makefile.am
+++ b/vmidentity/ssoclients/common/test/Makefile.am
@@ -9,4 +9,14 @@ ssocommontest_CPPFLAGS = \
     -I$(top_srcdir)/ssoclients/common/include/public/
 
 ssocommontest_LDADD = \
-    @top_builddir@/ssoclients/common/src/libssocommon.la
+    @top_builddir@/ssoclients/common/src/libssocommon.la \
+    @JANSSON_LIBS@ \
+    @CURL_LIBS@ \
+    @CRYPTO_LIBS@
+
+ssocommontest_LDFLAGS = \
+    @JANSSON_LDFLAGS@ \
+    @CURL_LDFLAGS@ \
+    @OPENSSL_LDFLAGS@
+
+
