--- a/vmidentity/build-maven/Makefile.am
+++ b/vmidentity/build-maven/Makefile.am
@@ -1,15 +1,9 @@
-
 CLASSPATH=@TOOLS_CLASSPATH@:@ANT_CLASSPATH@
 
-all: jar
+all-local: jar
 
 jar:
 	@echo "Building vmidentity"
 	cd @top_srcdir@ && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dant.home="@ANT_HOME@" -Djre.home="@JAVA_HOME@/jre" -Dmaven.home="@MAVEN_HOME@" -DBUILD_NUMBER="0" -Dbuild_dir="@abs_top_builddir@" org.apache.tools.ant.launch.Launcher $(ANT_VERBOSE) -f build.xml build
 
-
-install-exec-local:
-	@echo "Installing vmidentity"
-	cp @abs_top_builddir@/vmware-sts/packages/*.jar $(STAGEDIR)/opt/vmware/jars/
-
-
+.PHONY: jar
