lwraft: REST object API formal implementation
Change-Id: Iedf1850113d1ed0871105150fc67cf6cfbfda825

--- a/lwraft/server/rest-head/Makefile.am
+++ b/lwraft/server/rest-head/Makefile.am
@@ -10,6 +10,7 @@ librest_head_la_SOURCES = \
     httperror.c \
     ldapapi.c \
     libmain.c \
+    objectapi.c \
     operation.c \
     param.c \
     resource.c \
