changes to build lwraft
Change-Id: Ibdbcf25394b88604e642f3c57945ee95ae2b02bb

--- a/lwraft/server/vmkdc_mit_tools/Makefile.am
+++ b/lwraft/server/vmkdc_mit_tools/Makefile.am
@@ -1,5 +1,5 @@
-thirdparty_srcdir = $(top_srcdir)/../lwraft/thirdparty
-thirdparty_builddir = $(top_builddir)/../../lwraft/build/thirdparty
+thirdparty_srcdir = $(top_srcdir)/thirdparty
+thirdparty_builddir = $(top_builddir)/thirdparty
 
 noinst_PROGRAMS = \
     parsedb \
