--- a/vmdir/configure.ac
+++ b/vmdir/configure.ac
@@ -586,7 +586,7 @@ AC_SUBST(OIDC_LIBS)
 
 AC_PATH_PROG([IDL], [dceidl], [no], [$PATH:$DCERPC_PATH])
 
-if test x"$localstatedir" = x"/var"; then
+if test x"$localstatedir" = x"$prefix/var"; then
     vmdirdbdir="$localstatedir/lib/vmware/vmdir"
 else
     vmdirdbdir="$localstatedir"
