--- a/vmdir/tools/vdcpromo/Makefile.am
+++ b/vmdir/tools/vdcpromo/Makefile.am
@@ -18,13 +18,16 @@ vdcvmdirpromo_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
     @GSSAPI_LIBS@ \
+    @UUID_LIBS@ \
+    @SASL_LIBS@ \
     @LDAP_LIBS@ \
-    @PTHREAD_LIBS@
+    @LBER_LIBS@
 
 vdcvmdirpromo_LDFLAGS = \
     @DCERPC_LDFLAGS@ \
