--- a/lwraft/tools/vdcadmintool/Makefile.am
+++ b/lwraft/tools/vdcadmintool/Makefile.am
@@ -22,10 +22,12 @@ lwraftadmintool_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
+    @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
     @SASL_LIBS@ \
     @LDAP_LIBS@
