--- a/lwraft/tools/vdcleavefed/Makefile.am
+++ b/lwraft/tools/vdcleavefed/Makefile.am
@@ -18,9 +18,11 @@ lwraftleavefed_LDADD = \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
     @LWREG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
+    @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
     @LDAP_LIBS@
 
