--- a/lwraft/tools/vmkdc_admin/Makefile.am
+++ b/lwraft/tools/vmkdc_admin/Makefile.am
@@ -33,11 +33,13 @@ vmkdc_admin_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @UUID_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
+    @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
     @PTHREAD_LIBS@
 
