--- a/lwraft/tools/lwraftpromo/Makefile.am
+++ b/lwraft/tools/lwraftpromo/Makefile.am
@@ -18,10 +18,12 @@ lwraftpromo_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
+    @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
     @LDAP_LIBS@ \
     @PTHREAD_LIBS@
