--- a/lwraft/tools/vdcaclmgr/Makefile.am
+++ b/lwraft/tools/vdcaclmgr/Makefile.am
@@ -21,10 +21,12 @@ vdcaclmgr_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
+    @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
     @LDAP_LIBS@
 
