--- a/lwraft/tools/vdcsetupldu/Makefile.am
+++ b/lwraft/tools/vdcsetupldu/Makefile.am
@@ -17,10 +17,12 @@ vdcsetupldu_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
+    @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
     @LDAP_LIBS@
 
