changes to get promote to work
Change-Id: I73caac75bb6dd194e3f26531b56fb3033c304c94

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,6 +56,7 @@ package: $(RPMBUILD_SPECS)/$(PKG_SPEC) | $(RPMBUILD_DIRS)
               --define "_datadir /opt/vmware/share" \
               --define "_logdir $(LIGHTWAVE_LOGDIR)" \
               --define "_includedir /opt/vmware/include" \
+              --define "_localstatedir /var/lib/vmware" \
               --define "_likewise_open_prefix /opt/likewise" \
               --define "_vmevent_prefix /opt/vmware" \
               --define "_vmevent_ver $(VMEVENT_MAJOR_VER).$(VMEVENT_MINOR_VER)" \
@@ -64,7 +65,7 @@ package: $(RPMBUILD_SPECS)/$(PKG_SPEC) | $(RPMBUILD_DIRS)
               --define "_vmca_prefix /opt/vmware" \
               --define "_vmdns_prefix /opt/vmware" \
               --define "_vmsts_prefix /opt/vmware" \
-              --define "_javahome $(JAVA_HOME)" \
+              --define "_javahome /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.121-10.b14.fc25.x86_64" \
               --define "_anthome $(ANT_HOME)" \
               --define "_version $(LW_SERVER_MAJOR_VER).$(LW_SERVER_MINOR_VER).$(LW_SERVER_RELEASE_VER)" \
               --define "_patch $(LW_SERVER_PATCH_VER)" \
