--- a/vmdir/configure.ac
+++ b/vmdir/configure.ac
@@ -586,10 +586,10 @@ AC_SUBST(OIDC_LIBS)
 
 AC_PATH_PROG([IDL], [dceidl], [no], [$PATH:$DCERPC_PATH])
 
-if test x"$localstatedir" = x"$prefix/var"; then
+if test x"$localstatedir" = x"/var"; then
     vmdirdbdir="$localstatedir/lib/vmware/vmdir"
 else
-    vmdirdbdir="$localstatedir"
+    vmdirdbdir="$localstatedir/vmdir"
 fi
 AC_SUBST(vmdirdbdir)
 AS_AC_EXPAND(VMDIR_DB_DIR, $vmdirdbdir)
