Debian package fixes
Change-Id: I3bc550bb771066569f7c3c59f9e498c58bfff687

Debian rule changes to match the configure paramter changes

Change-Id: I302c84034139e401586cce32370dacf6c5545453

Debian build changes

Change-Id: Ie9f995030f5737d76e0c0814c86e7617b8c2ae31

Include post/pre scripts

Change-Id: Ie42c42656f78c9012b1883e22cc280809ccf4e92

--- a/vmdir/configure.ac
+++ b/vmdir/configure.ac
@@ -263,10 +263,10 @@ AC_ARG_WITH([sasl-includes],
         SASL_INCLUDES="-I$withval"
     ])
 
-AC_ARG_WITH([sasl-libs],
+AC_ARG_WITH([],
     [AC_HELP_STRING([--with-sasl-libs=<dir>], [use SASL libraries located in prefix <dir> ])],
     [
-        SASL_LIBPATH="$withval/lib64"
+        SASL_LIBPATH="$withval"
         SASL_LDFLAGS="-L$withval"
     ])
 
