build on Photon and with old Makefile
Change-Id: I304c16b12236bd195dc979558b042ed3852930c0

--- a/config/pscsetup/build.xml
+++ b/config/pscsetup/build.xml
@@ -6,8 +6,8 @@
 
 	<property name="target-sets" value="main, test" />
 
-        <property file="../product.properties" />
         <property name="MAINSRCROOT" value="${basedir}/.."/>
+        <property file="${MAINSRCROOT}/product.properties" />
         <property name="VMSTS_PACKAGE_BASE" value="${VMSTS_CLASSPATH}" />
         <property name="vmsts.classpath" value="${VMSTS_CLASSPATH}" />
         <property name="build.packages.vmware-identity-platform"
