--- a/config/jdepends/build.xml
+++ b/config/jdepends/build.xml
@@ -5,7 +5,7 @@
 <project name="vmware-config-depends" default="build" basedir=".">
 
    <property name="MAINSRCROOT" value="${basedir}/.." />
-   <property file="${MAINSRCROOT}/java/product.properties" />
+   <property file="${MAINSRCROOT}/product.properties" />
    <property name="buildRoot" value="${build_dir}/${PRODUCT_NAME}" />
    <property name="depends" value="${build_dir}/depends" />
 
@@ -36,6 +36,7 @@
 
           <!-- TEST DEPENDENCIES -->
            <url url="http://central.maven.org/maven2/org/powermock/powermock-easymock-release-full/1.6.2/powermock-easymock-release-full-1.6.2-full.jar" />
+           <url url="http://central.maven.org/maven2/ant-contrib/ant-contrib/1.0b3/ant-contrib-1.0b3.jar" />
 
          </resources>
      </copy>
