--- a/vmidentity/build.xml
+++ b/vmidentity/build.xml
@@ -6,8 +6,20 @@
   <property file="${MAINSRCROOT}/product.properties" />
   <property name="buildRoot" value="${build_dir}/${PRODUCT_NAME}" />
 
-  <property name="AFD_PACKAGE_BASE" value="${build_dir}/../vmafd/authentication-framework/packages" />
-  <property name="VMCA_PACKAGE_BASE" value="${build_dir}/../vmca/certificate-authority/packages" />
+  <condition property="afd_build_dir"
+             value="${MAINSRCROOT}/../vmafd/build"
+             else="${build_dir}/../vmafd">
+    <equals arg1="${MAINSRCROOT}/build/rpmbuild/BUILD/build" arg2="${build_dir}" />
+  </condition>
+
+  <condition property="vmca_build_dir"
+             value="${MAINSRCROOT}/../vmca/build"
+             else="${build_dir}/../vmca">
+    <equals arg1="${MAINSRCROOT}/build/rpmbuild/BUILD/build" arg2="${build_dir}" />
+  </condition>
+
+  <property name="AFD_PACKAGE_BASE" value="${afd_build_dir}/authentication-framework/packages" />
+  <property name="VMCA_PACKAGE_BASE" value="${vmca_build_dir}/certificate-authority/packages" />
 
   <property name="AFD_GROUP_BASE" value="com.vmware.vmafd" />
   <property name="VMCA_GROUP_BASE" value="com.vmware.vmca" />
