PR 1866754 - LDAP CondWrite Control
Change-Id: I5fb01717c01839d75372f45335075a3fb28aa78d

--- a/lwraft/tools/test/vmdirclienttest/Makefile.am
+++ b/lwraft/tools/test/vmdirclienttest/Makefile.am
@@ -2,7 +2,8 @@ bin_PROGRAMS = lwraftclienttest
 
 lwraftclienttest_SOURCES = \
     main.c \
-    saslclient.c
+    saslclient.c \
+    testldapcontrol.c
 
 lwraftclienttest_CPPFLAGS = \
     -I$(top_srcdir)/include \
