--- a/vmidentity/pom.xml
+++ b/vmidentity/pom.xml
@@ -39,7 +39,6 @@
         <module>lightwaveui</module>
         <module>sso-config</module>
         <module>service</module>
-        <module>jdepends</module>
       </modules>
     </profile>
 
@@ -273,6 +272,27 @@
               </artifactItems>
               <outputDirectory>${outputDirectory}</outputDirectory>
               <stripVersion>true</stripVersion>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- copy dependencies to target folder -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.0.0</version>
+        <executions>
+          <execution>
+            <id>copy-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${outputDirectory}/lib</outputDirectory>
+              <overWriteReleases>false</overWriteReleases>
+              <overWriteSnapshots>true</overWriteSnapshots>
+              <excludeTransitive>true</excludeTransitive>
             </configuration>
           </execution>
         </executions>
