lwraft: new operational attribue 'vmwRaftLogChanged' (PR 1866904) + removing obsolete code
Change-Id: I2315b4ece516f238568d464421cbd9f9502d3d0c

--- a/lwraft/common/Makefile.am
+++ b/lwraft/common/Makefile.am
@@ -47,12 +47,8 @@ libcommon_la_SOURCES = \
     schema/patch.c \
     schema/resolve.c \
     schema/schema.c \
-    schema/verify.c \
-    schema/legacy/legacyload.c \
-    schema/legacy/legacypatch.c \
-    schema/legacy/legacyschema.c \
-    schema/legacy/legacyschemamod.c \
-    schema/legacy/legacyutil.c
+    schema/util.c \
+    schema/verify.c
 
 libcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/include \
