--- a/lwraft/server/schema/Makefile.am
+++ b/lwraft/server/schema/Makefile.am
@@ -14,11 +14,7 @@ libschema_la_SOURCES = \
     parse.c \
     patch.c \
     syntax.c \
-    util.c \
-    legacy/legacylibmain.c \
-    legacy/legacyload.c \
-    legacy/legacypatch.c \
-    legacy/legacyutil.c
+    util.c
 
 libschema_la_CPPFLAGS = \
     -I$(top_srcdir)/include \
