lwraft build changes
Change-Id: I31e336f62fd9c5232956baf9ec5d1b0862dd0765

--- a/lwraft/tools/test/vmdirclienttest/Makefile.am
+++ b/lwraft/tools/test/vmdirclienttest/Makefile.am
@@ -2,8 +2,7 @@ bin_PROGRAMS = lwraftclienttest
 
 lwraftclienttest_SOURCES = \
     main.c \
-    saslclient.c \
-    testldapcontrol.c
+    saslclient.c
 
 lwraftclienttest_CPPFLAGS = \
     -I$(top_srcdir)/include \
@@ -22,13 +21,16 @@ lwraftclienttest_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
+    @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
     @SASL_LIBS@ \
-    @LDAP_LIBS@
+    @LDAP_LIBS@ \
+    @PTHREAD_LIBS@
 
 lwraftclienttest_LDFLAGS = \
     @DCERPC_LDFLAGS@ \
