--- a/lwraft/tools/test/registry/Makefile.am
+++ b/lwraft/tools/test/registry/Makefile.am
@@ -16,12 +16,15 @@ registrytest_LDADD = \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
+    @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
-    @LDAP_LIBS@
+    @LDAP_LIBS@ \
+    @PTHREAD_LIBS@
 
 registrytest_LDFLAGS = \
     @LW_LDFLAGS@
