PR 1867928 - LDAP CondWrite Control REST API
Change-Id: Ice103215bd61b54d7b1797467cf0bbbfb65b426b

--- a/lwraft/server/rest-head/Makefile.am
+++ b/lwraft/server/rest-head/Makefile.am
@@ -9,6 +9,7 @@ librest_head_la_SOURCES = \
     globals.c \
     httperror.c \
     ldapapi.c \
+    ldapcontrol.c \
     libmain.c \
     objectapi.c \
     operation.c \
