vmdir: enable REST head (PR 1870155)
Change-Id: I12ef38f81d69733d69edaff4b41891ec7cc6149e

--- a/vmdir/server/Makefile.am
+++ b/vmdir/server/Makefile.am
@@ -18,6 +18,7 @@ SUBDIRS = \
     $(STOREDIRS) \
     indexcfg \
     ldap-head \
+    rest-head \
     middle-layer \
     replication \
     saslvmdirdb \
