--- a/vmidentity/commons/samltoken/pom.xml
+++ b/vmidentity/commons/samltoken/pom.xml
@@ -10,18 +10,37 @@
   </parent>
 
   <artifactId>samltoken</artifactId>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
   <name>SAML Token Library</name>
 
   <build>
     <plugins>
-      <!-- Build OSGi Manifest -->
+
+    <plugin>
+      <artifactId>maven-jar-plugin</artifactId>
+      <configuration>
+        <archive>
+        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+        </archive>
+      </configuration>
+     </plugin>
+    
+     <!-- Build OSGi Manifest -->
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <version>${maven.bundle.plugin.version}</version>
         <extensions>true</extensions>
-      </plugin>
+         <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>manifest</goal>
+            </goals>
+          </execution>
+        </executions>
+     </plugin>
     </plugins>
   </build>
 
