--- a/vmidentity/wsTrustClient/pom.xml
+++ b/vmidentity/wsTrustClient/pom.xml
@@ -10,17 +10,36 @@
   </parent>
 
   <artifactId>vmware-identity-wsTrustClient</artifactId>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
   <name>WS-Trust Client</name>
 
   <build>
     <plugins>
+
+     <plugin>
+      <artifactId>maven-jar-plugin</artifactId>
+      <configuration>
+        <archive>
+        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+        </archive>
+      </configuration>
+     </plugin>
+
       <!-- Build OSGi Manifest -->
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <version>${maven.bundle.plugin.version}</version>
         <extensions>true</extensions>
+         <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>manifest</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
